KIBON-2000 refactor: adjust to new schema